source/gorilla/include_nim/common/gc_common.h

#    define gorillalib "gorilla.dll"
#    define gorillalib "gorilla.dylib"
#    define gorillalib "gorilla.so"
/*************************/
/**  System Operations  **/
/*************************/
/** System operations.
 *
 *  \ingroup common
 *  \defgroup gc_SystemOps System Operations
 */

/** System allocation policies [\ref POD].
 *
 *  \ingroup gc_SystemOps
 */
typedef struct gc_SystemOps {
  void* (*allocFunc)(gc_uint32 in_size);
  void* (*reallocFunc)(void* in_ptr, gc_uint32 in_size);
  void (*freeFunc)(void* in_ptr);
};
extern gc_SystemOps* gcX_ops;
/** Initialize the Gorilla library.
 *
 *  This must be called before any other functions in the library.
 *
 *  \ingroup gc_SystemOps
 *  \param in_callbacks You may (optionally) pass in a gc_SystemOps structure
 *                      to define custom allocation functions.  If you do not,
 *                      Gorilla will use standard ANSI C malloc/realloc/free
 *                      functions.
 *  \return GC_SUCCESS if library initialized successfully. GC_ERROR_GENERIC
 *          if not.
 */
gc_result gc_initialize(gc_SystemOps* in_callbacks);
/** Shutdown the Gorilla library.
 *
 *  Call this once you are finished using the library. After calling it,
 *  do not call any functions in the library.
 *
 *  \ingroup gc_SystemOps
 *  \return GC_SUCCESS if the library shut down successfully. GC_ERROR_GENERIC
 *          if not.
 */
gc_result gc_shutdown();
/***********************/
/**  Circular Buffer  **/
/***********************/
/** Circular Buffer.
 *
 *  \ingroup common
 *  \defgroup gc_CircBuffer Circular Buffer
 */

/** Circular buffer object [\ref SINGLE_CLIENT].
 *
 *  A circular buffer object that is thread-safe for single producer/single
 *  consumer use cases. It assumes a single thread producing (writing)
 *  data, and a single thread consuming (reading) data. The producer and 
 *  consumer threads may be the same thread.
 *
 *  \ingroup gc_CircBuffer
 *  \warning While it can be read/written from two different threads, the
 *           object’s memory management policy is Single Client, since there
 *           is only one owner responsible for creation/destruction of the
 *           thread.
 */
typedef struct gc_CircBuffer {
  gc_uint8* data;
  gc_uint32 dataSize;
  volatile gc_uint32 nextAvail;
  volatile gc_uint32 nextFree;
} gc_CircBuffer;
/** Create a circular buffer object.
 *
 *  \ingroup gc_CircBuffer
 */
gc_CircBuffer* gc_buffer_create(gc_uint32 in_size);
/** Destroy a circular buffer object.
 *
 *  \ingroup gc_CircBuffer
 */
gc_result gc_buffer_destroy(gc_CircBuffer* in_buffer);
/** Retrieve number of available bytes to read from a circular buffer object.
 *
 *  \ingroup gc_CircBuffer
 */
gc_uint32 gc_buffer_bytesAvail(gc_CircBuffer* in_buffer);
/** Retrieve number of free bytes to write to a circular buffer object.
 *
 *  \ingroup gc_CircBuffer
 */
gc_uint32 gc_buffer_bytesFree(gc_CircBuffer* in_buffer);
/** Retrieve write buffer(s) of free data in a circular buffer object.
 *
 *  \ingroup gc_CircBuffer
 *  \warning You must call gc_buffer_produce() to tell the buffer how many
 *           bytes you wrote to it.
 */
gc_result gc_buffer_getFree(gc_CircBuffer* in_buffer, gc_uint32 in_numBytes,
                            void** out_dataA, gc_uint32* out_sizeA,
                            void** out_dataB, gc_uint32* out_sizeB);
/** Write data to the circular buffer.
 *
 *  Easier-to-use than gc_buffer_getFree(), but less flexible.
 *
 *  \ingroup gc_CircBuffer
 *  \warning You must call gc_buffer_produce() to tell the buffer how many
 *           bytes you wrote to it.
 */
gc_result gc_buffer_write(gc_CircBuffer* in_buffer, void* in_data,
                          gc_uint32 in_numBytes);
/** Retrieve read buffer(s) of available data in a circular buffer object.
 *
 *  \ingroup gc_CircBuffer
 *  \warning You must call gc_buffer_consume() to tell the buffer how many
 *           bytes you read from it.
 */
gc_result gc_buffer_getAvail(gc_CircBuffer* in_buffer, gc_uint32 in_numBytes,
                             void** out_dataA, gc_uint32* out_sizeA,
                             void** out_dataB, gc_uint32* out_sizeB);
/** Read data from the circular buffer.
 *
 *  Easier-to-use than gc_buffer_getAvail(), but less flexible.
 *
 *  \ingroup gc_CircBuffer
 *  \warning You must call gc_buffer_consume() to tell the buffer how many
 *           bytes you read from it.
 */
void gc_buffer_read(gc_CircBuffer* in_buffer, void* in_data,
                    gc_uint32 in_numBytes);
/** Tell the buffer that bytes have been written to it.
 *
 *  \ingroup gc_CircBuffer
 */
void gc_buffer_produce(gc_CircBuffer* in_buffer, gc_uint32 in_numBytes);
/** Tell the buffer that bytes have been read from it.
 *
 *  \ingroup gc_CircBuffer
 */
void gc_buffer_consume(gc_CircBuffer* in_buffer, gc_uint32 in_numBytes);
/***********************/
/**  Linked List  **/
/***********************/
/** Linked list data structure and associated functions.
 *
 *  \ingroup common
 *  \defgroup gc_Link Linked List
 */

/** Linked list data structure [POD].
 *
 *  Intended usage: create a gc_Link head link. Add and remove additional links
 *  as needed. To iterate, start with it = head->next. Each loop, it = it->next.
 *  Terminate when it == &head.
 *
 *  \ingroup gc_Link
 */
typedef struct gc_Link {
  struct gc_Link* next;
  struct gc_Link* prev;
  void* data;
} gc_Link;
/** Initializes a linked list head element.
 *
 *  \ingroup gc_Link
 */
void gc_list_head(gc_Link* in_head);
/** Adds a link to a linked list (initializes the link).
 *
 *  \ingroup gc_Link
 */
void gc_list_link(gc_Link* in_head, gc_Link* in_link, void* in_data);
/** Removes a link from the linked list.
 *
 *  \ingroup gc_Link
 */
void gc_list_unlink(gc_Link* in_link);
/**
 * --------------------------------------------------
 * Patch, Common struct types between ga_intermal/ga
 * --------------------------------------------------
 */

 /** Audio format data structure [\ref POD].
 *
 *  Stores the format (sample rate, bps, channels) for PCM audio data.
 *
 *  This object may be used on any thread.
 *
 *  \ingroup ga_Format
 */
typedef struct ga_Format {
  gc_int32 sampleRate; /**< Sample rate (usually 44100) */
  gc_int32 bitsPerSample; /**< Bits per PCM sample (usually 16) */
  gc_int32 numChannels; /**< Number of audio channels (1 for mono, 2 for stereo) */
};
/** Hardware device abstract data structure [\ref SINGLE_CLIENT].
 *
 *  Abstracts the platform-specific details of presenting audio buffers to sound playback hardware.
 *
 *  \ingroup intDevice
 *  \warning You can only have one device open at-a-time.
 *  \warning Never instantiate a ga_Device directly, unless you are implementing a new concrete
 *           device implementation. Instead, you should use ga_device_open().
 */
struct ga_Device {
  gc_int32 devType; 
  gc_int32 numBuffers; 
  gc_int32 numSamples; 
  ga_Format format;
};
/*****************/
/*  Data Source  */
/*****************/
/** Internal data source object definition.
 *
 *  \ingroup internal
 *  \defgroup intDataSource Data Source
 */

/** Data source read callback prototype.
 *  
 *  \ingroup intDataSource
 *  \param in_context User context (pointer to the first byte after the data source).
 *  \param in_dst Destination buffer into which bytes should be read. Guaranteed to
 *                be at least (in_size * in_count) bytes in size.
 *  \param in_size Size of a single element (in bytes).
 *  \param in_count Number of elements to read.
 *  \return Total number of bytes read into the destination buffer.
 */
typedef gc_int32 (*tDataSourceFunc_Read)(void* in_context, void* in_dst, gc_int32 in_size, gc_int32 in_count);
/** Data source seek callback prototype.
 *  
 *  \ingroup intDataSource
 *  \param in_context User context (pointer to the first byte after the data source).
 *  \param in_offset Offset (in bytes) from the specified seek origin.
 *  \param in_origin Seek origin (see [\ref globDefs]).
 *  \return If seek succeeds, the callback should return 0, otherwise it should return -1.
 *  \warning Data sources with GA_FLAG_SEEKABLE should always provide a seek callback.
 *  \warning Data sources with GA_FLAG_SEEKABLE set should only return -1 in the case of
 *           an invalid seek request.
 *  \todo Define a less-confusing contract for extending/defining this function.
 */
typedef gc_int32 (*tDataSourceFunc_Seek)(void* in_context, gc_int32 in_offset, gc_int32 in_origin);
/** Data source tell callback prototype.
 *
 *  \ingroup intDataSource
 *  \param in_context User context (pointer to the first byte after the data source).
 *  \return The current data source read position.
 */
typedef gc_int32 (*tDataSourceFunc_Tell)(void* in_context);
/** Data source close callback prototype.
 *
 *  \ingroup intDataSource
 *  \param in_context User context (pointer to the first byte after the data source).
 */
typedef void (*tDataSourceFunc_Close)(void* in_context);
/** Abstract data source data structure [\ref MULTI_CLIENT].
 *
 *  A data source is a source of binary data, such as a file or socket, that 
 *  generates bytes of binary data. This data is usually piped through a sample 
 *  source to generate actual PCM audio data.
 *
 *  \ingroup intDataSource
 *  \todo Design a clearer/better system for easily extending this data type.
 */
struct ga_DataSource {
  tDataSourceFunc_Read readFunc; /**< Internal read callback. */
  tDataSourceFunc_Seek seekFunc; /**< Internal seek callback (optional). */
  tDataSourceFunc_Tell tellFunc; /**< Internal tell callback (optional). */
  tDataSourceFunc_Close closeFunc; /**< Internal close callback (optional). */
  gc_int32 refCount; /**< Reference count. */
  gc_Mutex* refMutex; /**< Mutex to protect reference count manipulations. */
  gc_int32 flags; /**< Flags defining which functionality this data source supports (see [\ref globDefs]). */
};